feat: ListOfPlays -> 순서 정렬 로직 추가 + 관련 테스트 추가